--- a/client/.env.local
+++ b/client/.env.local
@@ -1,5 +1,5 @@
 #NEXT_PUBLIC_BASE_URL=https://newschoolapi.mniagrohubinfo.com/api
 
 
-NEXT_PUBLIC_BASE_URL=http://localhost:8600/api
-#NEXT_PUBLIC_BASE_URL=https://newschoolapi.mniagrohubinfo.com/api
+#NEXT_PUBLIC_BASE_URL=http://localhost:8600/api
+NEXT_PUBLIC_BASE_URL=https://nextapi.mniagrohubinfo.com/api
